--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
     <uses-feature android:name="android.hardware.camera.any"/>
 
-    <meta-data
-        android:name="com.google.android.geo.API_KEY"
-        android:value="AIzaSyANNK34wXW60r2i34Otx9Mv8tTzpObhUT8"/>
+    <!-- Location Permissions -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
 
     <application
         android:name=".VendedorApp"
@@ -24,6 +25,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Vendedorcadastrocliente"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyANNK34wXW60r2i34Otx9Mv8tTzpObhUT8"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
